--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -3,6 +3,24 @@ body {
     overflow: scroll;
 }
 
+.negrito {
+    font-weight: bold; 
+    
+}
+.titulo-controle{
+    text-align: center;
+    font-size: 29px; 
+    margin-top: 5px;
+    margin-bottom: 5px;   
+}
+
+.titulo-controle2{
+    text-align: center;
+    font-size: 20px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 @media only screen and (max-width : 992px) {
     body {
         padding-left: 0;
@@ -18,10 +36,10 @@ body {
     margin-top: 30px;
 }
 
-.titulo-controle{
-    text-align: center;
-    font-size: 29px; 
-    margin-top: 5px;
-    margin-bottom: 5px;
-    
-}
+
+canvas{
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+    }
+
